--- a/app/globals.css
+++ b/app/globals.css
@@ -2,22 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+@layer base {
+  html {
+    @apply scroll-smooth;
+  }
+}
+
+.gradient-bg {
+  background: rgb(31, 31, 31);
+  background: radial-gradient(
+    circle,
+    rgba(31, 31, 31, 1) 3%,
+    rgba(0, 0, 0, 1) 100%
+  );
 }
