Added reactive dot background and 3D logo for desktop hero section - on mobile, logobanner will be shown

--- a/app/globals.css
+++ b/app/globals.css
@@ -38,3 +38,13 @@
   transition: 400ms mask ease;
   will-change: mask;
 }
+
+.dot-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: transparent;
+  z-index: -1;
+}
