--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,13 @@
   background: transparent;
   z-index: -1;
 }
+
+/* Add this to your CSS file */
+.shadow-glow {
+  box-shadow: 0 0 30px rgba(255, 255, 255, 1), 0 0 60px rgba(255, 255, 255, 0.9), 0 0 100px rgba(255, 255, 255, 0.8);
+}
+
+/* Optionally, adjust the transition for the shadow */
+.w-fit {
+  transition: box-shadow 0.3s ease-in-out;
+}
